* EVOL country name is not required (country code is enough)
* EVOL Now stores validator's login on event validation

1.0.2 (2018-11-14)
------
* EVOL Allow retrieval of a list of events
* EVOL Manage event submission datetime UTC

1.0.1 (2018-11-13)
------
* EVOL Store more event submission data (submitter, url, event type, etc.) and allowing storing with no previous geocoding